--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: githubaction  # ไม่ต้องใส่ naruapon ซ้ำ
+          image: Vue-App  # ไม่ต้องใส่ naruapon ซ้ำ
           registry: ghcr.io/YanakornS
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
